fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
  
   body {
     font-family: "Alexandria", serif;
+    overflow: hidden;
+    
   }
 }
 
